[gd_scene load_steps=4 format=2]

[ext_resource path="res://sound/SoundScape.gd" type="Script" id=1]
[ext_resource path="res://sound/SoundPool.tscn" type="PackedScene" id=2]

[sub_resource type="BoxShape" id=1]

[node name="SoundScape" type="Spatial"]
script = ExtResource( 1 )

[node name="Area" type="Area" parent="."]
collision_layer = 0
collision_mask = 8

[node name="CollisionShape" type="CollisionShape" parent="Area"]
shape = SubResource( 1 )

[node name="Timer" type="Timer" parent="."]

[node name="SoundPool" parent="." instance=ExtResource( 2 )]

[connection signal="body_entered" from="Area" to="." method="_on_Area_body_entered"]
[connection signal="body_exited" from="Area" to="." method="_on_Area_body_exited"]
